<resources>
    <string name="app_name">MultiCastTestApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="packets_received">Packets Received</string>
    <string name="connect">Tune In</string>
    <string name="enter_port">Enter Port</string>
    <string name="DefaultPort">6789</string>
    <string name="IP_add">Enter IP Adress</string>
    <string name="DefaultIP">228.5.6.7</string>
    <string name="status">Status</string>

    <string-array name="Testcase_array">
        <item>2 packets per second</item>
        <item>10 packets per second</item>
        <item>100 packets per second </item>
        <!--<item>200 packets 0.7 seconds</item>
        <item>250 packets 0.6 seconds</item>
        <item>300 packets 0.5 seconds</item>
        <item>350 packets 0.4 seconds</item>
        <item>400 packets 0.3 seconds</item>
        <item>450 packets 0.2 seconds</item>
        <item>500 packets 0.1 seconds</item>-->
    </string-array>

</resources>
